switched to RioTurtle parser