@@ -1,41 +1,35 @@
 package edu.stanford.bmir.protege.web.server.onc2ont;
 
 import edu.stanford.bmir.protege.web.server.access.AccessManager;
-import edu.stanford.bmir.protege.web.server.change.ChangeApplicationResult;
-import edu.stanford.bmir.protege.web.server.change.ChangeListGenerator;
+import edu.stanford.bmir.protege.web.server.change.AddAxiomChange;
+import edu.stanford.bmir.protege.web.server.change.AddOntologyAnnotationChange;
 import edu.stanford.bmir.protege.web.server.change.FixedChangeListGenerator;
-import edu.stanford.bmir.protege.web.server.change.HasApplyChanges;
-import edu.stanford.bmir.protege.web.server.change.OntologyChange;
-import edu.stanford.bmir.protege.web.server.change.OwlOntologyChangeTranslator;
+import edu.stanford.bmir.protege.web.server.change.OntologyChangeList;
 import edu.stanford.bmir.protege.web.server.dispatch.AbstractProjectActionHandler;
 import edu.stanford.bmir.protege.web.server.dispatch.ExecutionContext;
 import edu.stanford.bmir.protege.web.server.owlapi.WebProtegeOWLManager;
-import edu.stanford.bmir.protege.web.server.project.chg.RootOntologyProvider;
+import edu.stanford.bmir.protege.web.server.project.DefaultOntologyIdManager;
+import edu.stanford.bmir.protege.web.server.project.chg.ChangeManager;
 import edu.stanford.bmir.protege.web.shared.access.BuiltInAction;
 import edu.stanford.bmir.protege.web.shared.onc2ont.ProcessClinicalNotesAction;
 import edu.stanford.bmir.protege.web.shared.onc2ont.ProcessClinicalNotesResult;
 import edu.stanford.bmir.protege.web.shared.project.ProjectId;
-import edu.stanford.bmir.protege.web.shared.user.UserId;
-import org.semanticweb.owlapi.formats.TurtleDocumentFormat;
-import org.semanticweb.owlapi.model.*;
+import org.semanticweb.owlapi.formats.RioTurtleDocumentFormat;
+import org.semanticweb.owlapi.io.OWLOntologyDocumentSource;
 import org.semanticweb.owlapi.io.StreamDocumentSource;
-import org.semanticweb.owlapi.model.AddAxiom;
-import org.semanticweb.owlapi.model.OWLDataFactory;
-import org.semanticweb.owlapi.model.OWLOntologyCreationException;
+import org.semanticweb.owlapi.model.*;
+import org.semanticweb.owlapi.model.parameters.Imports;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-
-import java.util.ArrayList;
-import java.util.List;
-import java.util.Set;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
 import javax.inject.Inject;
 import java.io.*;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
+import java.util.Set;
 
 /**
  * Action handler for processing clinical notes through the onc2ont service.
@@ -45,38 +39,23 @@ public class ProcessClinicalNotesActionHandler extends AbstractProjectActionHand
     private static final Logger logger = LoggerFactory.getLogger(ProcessClinicalNotesActionHandler.class);
 
     @Nonnull
-    private final OWLDataFactory dataFactory;
-
-    @Nonnull
     private final ProjectId projectId;
 
     @Nonnull
-    private final RootOntologyProvider rootOntologyProvider;
+    private final ChangeManager changeManager;
 
     @Nonnull
-    private final OWLOntologyManager ontologyManager;
-    
-    @Nonnull
-    private final HasApplyChanges changeManager;
-    
-    @Nonnull
-    private final OwlOntologyChangeTranslator changeTranslator;
+    private final DefaultOntologyIdManager defaultOntologyIdManager;
 
     @Inject
     public ProcessClinicalNotesActionHandler(@Nonnull AccessManager accessManager,
-                                          @Nonnull OWLDataFactory dataFactory,
                                           @Nonnull ProjectId projectId,
-                                          @Nonnull RootOntologyProvider rootOntologyProvider,
-                                          @Nonnull OWLOntologyManager ontologyManager,
-                                          @Nonnull HasApplyChanges changeManager,
-                                          @Nonnull OwlOntologyChangeTranslator changeTranslator) {
+                                          @Nonnull ChangeManager changeManager,
+                                          @Nonnull DefaultOntologyIdManager defaultOntologyIdManager) {
         super(accessManager);
-        this.dataFactory = dataFactory;
         this.projectId = projectId;
-        this.rootOntologyProvider = rootOntologyProvider;
-        this.ontologyManager = ontologyManager;
         this.changeManager = changeManager;
-        this.changeTranslator = changeTranslator;
+        this.defaultOntologyIdManager = defaultOntologyIdManager;
     }
 
     @Nonnull
@@ -89,109 +68,127 @@ public class ProcessClinicalNotesActionHandler extends AbstractProjectActionHand
     @Override
     public ProcessClinicalNotesResult execute(@Nonnull ProcessClinicalNotesAction action, @Nonnull ExecutionContext executionContext) {
         try {
-            UserId userId = executionContext.getUserId();
-            logger.info("[Onc2Ont] Processing clinical notes for project: {}, user: {}", projectId.getId(), userId.getUserName());
-            
-            // Get the root ontology
-            OWLOntology rootOntology = rootOntologyProvider.get();
-            logger.info("[Onc2Ont] Retrieved root ontology: {}", rootOntology.getOntologyID());
-            logger.info("[Onc2Ont] Root ontology has {} axioms before processing", rootOntology.getAxioms().size());
-            
-            // Debug OntologyManager implementation
-            logger.info("[Onc2Ont] OntologyManager implementation: {}", ontologyManager.getClass().getName());
-            if (ontologyManager instanceof org.semanticweb.owlapi.model.OWLOntologyManager) {
-                logger.info("[Onc2Ont] OntologyManager is standard OWLAPI OntologyManager");
-            }
+            logger.info("[Onc2Ont] Processing clinical notes for project: {}, user: {}", 
+                       projectId.getId(), executionContext.getUserId().getUserName());
             
             // Call the onc2ont service API
-            logger.info("[Onc2Ont] Sending {} characters of clinical notes to onc2ont service", action.getClinicalNotes().length());
+            logger.info("[Onc2Ont] Sending {} characters of clinical notes to onc2ont service", 
+                       action.getClinicalNotes().length());
             String ttlContent = sendToOnc2Ont(action.getClinicalNotes());
-            logger.info("[Onc2Ont] Received {} bytes of Turtle content from service", ttlContent.getBytes(StandardCharsets.UTF_8).length);
+            logger.info("[Onc2Ont] Received {} bytes of Turtle content from service", 
+                       ttlContent.getBytes(StandardCharsets.UTF_8).length);
             
-            // Parse the Turtle content into a temporary OWL ontology using a standalone manager
-            // instead of the project's ontology manager which restricts ontology creation
-            InputStream inputStream = new ByteArrayInputStream(ttlContent.getBytes(StandardCharsets.UTF_8));
-            // Provide the TurtleDocumentFormat to the StreamDocumentSource
-            TurtleDocumentFormat turtleFormat = new TurtleDocumentFormat();
-            // Create a temporary IRI for the document source
-            IRI tempDocumentIri = IRI.create("http://webprotege.stanford.edu/generated-onc2ont/" + projectId.getId() + "/temp#" + System.currentTimeMillis());
-            StreamDocumentSource documentSource = new StreamDocumentSource(inputStream, tempDocumentIri, turtleFormat, "text/turtle");
-            logger.info("[Onc2Ont] Loading ontology from Turtle content using standalone manager with explicit Turtle format and temp IRI: {}", tempDocumentIri);
+            // Parse the Turtle content using WebProtege OWL API
+            logger.info("[Onc2Ont] Parsing Turtle content using local OWL API parser");
+            var parsingResult = parseTurtleContent(ttlContent);
             
-            // Create a standalone manager that isn't restricted
-            OWLOntologyManager tempManager = WebProtegeOWLManager.createOWLOntologyManager();
-            OWLOntologyLoaderConfiguration loaderConfig = new OWLOntologyLoaderConfiguration();
-            OWLOntology importedOntology = tempManager.loadOntologyFromOntologyDocument(documentSource, loaderConfig);
-            logger.info("[Onc2Ont] Loaded ontology with {} axioms", importedOntology.getAxioms().size());
-            
-            
-            // Debug the axioms being added
-            if (importedOntology.getAxioms().size() > 0) {
-                logger.info("[Onc2Ont] Example axioms from imported ontology:");
-                importedOntology.getAxioms().stream().limit(5).forEach(axiom -> 
-                    logger.info("[Onc2Ont] Axiom: {}", axiom));
-            } else {
-                logger.warn("[Onc2Ont] No axioms found in imported ontology!");
+            if (parsingResult.axioms.isEmpty()) {
+                logger.error("[Onc2Ont] No axioms found in Turtle content from service");
+                return ProcessClinicalNotesResult.error("No axioms found in service response");
             }
             
-            // Merge the imported ontology with the root ontology using ChangeManager
-            logger.info("[Onc2Ont] Merging axioms into root ontology using changeManager");
+            logger.info("[Onc2Ont] Successfully parsed {} axioms and {} ontology annotations from Turtle content", 
+                       parsingResult.axioms.size(), parsingResult.annotations.size());
             
-            // Create a list of changes (AddAxiom operations)
-            List<OWLOntologyChange> owlChanges = new ArrayList<>();
-            int axiomsCount = 0;
+            // Get the default ontology ID for adding axioms
+            var ontologyId = defaultOntologyIdManager.getDefaultOntologyId();
+            logger.info("[Onc2Ont] Adding axioms to ontology: {}", ontologyId);
             
-            for (OWLAxiom axiom : importedOntology.getAxioms()) {
-                owlChanges.add(new AddAxiom(rootOntology, axiom));
-                axiomsCount++;
-            }
+            // Build the change list using the existing WebProtégé infrastructure
+            var builder = OntologyChangeList.<String>builder();
             
-            // Convert OWLOntologyChange objects to WebProtege's OntologyChange objects
-            List<OntologyChange> changes = new ArrayList<>();
-            for (OWLOntologyChange owlChange : owlChanges) {
-                changes.add(changeTranslator.toOntologyChange(owlChange));
-            }
+            // Add axioms
+            parsingResult.axioms.forEach(axiom -> 
+                builder.add(AddAxiomChange.of(ontologyId, axiom))
+            );
             
-            // Generate a fixed change list with our changes
-            ChangeListGenerator<Set<OWLEntity>> changeListGenerator = 
-                new FixedChangeListGenerator<>(changes, importedOntology.getSignature(), "Added ontology elements from clinical notes processing");
+            // Add ontology annotations if any
+            parsingResult.annotations.forEach(annotation -> 
+                builder.add(AddOntologyAnnotationChange.of(ontologyId, annotation))
+            );
+            
+            var changeList = builder.build("Added ontology elements from clinical notes processing");
+            var changeListGenerator = new FixedChangeListGenerator<>(changeList.getChanges(),
+                                                                     "",
+                                                                     "Added ontology elements from clinical notes processing");
             
             // Apply the changes through the change manager
-            logger.info("[Onc2Ont] Applying {} change operations through change manager", changes.size());
-            logger.info("[Onc2Ont] Original OWL changes count: {}", owlChanges.size());
-            logger.info("[Onc2Ont] Converted WebProtege changes count: {}", changes.size());
+            logger.info("[Onc2Ont] Applying {} total changes ({} axioms + {} ontology annotations) through change manager", 
+                       changeList.getChanges().size(), 
+                       parsingResult.axioms.size(), 
+                       parsingResult.annotations.size());
+            var result = changeManager.applyChanges(executionContext.getUserId(), changeListGenerator);
             
-            ChangeApplicationResult<Set<OWLEntity>> result = 
-                changeManager.applyChanges(executionContext.getUserId(), changeListGenerator);
-            
-            logger.info("[Onc2Ont] Changes successfully applied: {}", result.getChangeList().size());
-            logger.info("[Onc2Ont] Root ontology now has {} axioms after processing", rootOntology.getAxioms().size());
-            
-            // Log the entities affected by these changes
-            logger.info("[Onc2Ont] Number of entities affected: {}", result.getSubject().size());
-            if (!result.getSubject().isEmpty()) {
-                logger.info("[Onc2Ont] Example affected entities:");
-                result.getSubject().stream().limit(5).forEach(entity -> 
-                    logger.info("[Onc2Ont] Entity: {}", entity));
-            }
+            logger.info("[Onc2Ont] Successfully applied {} changes", result.getChangeList().size());
             
             return ProcessClinicalNotesResult.success();
-        } catch (OWLOntologyCreationException e) {
-            logger.error("[Onc2Ont] Failed to parse the generated ontology", e);
-            return ProcessClinicalNotesResult.error("Failed to parse the generated ontology: " + e.getMessage());
+            
         } catch (IOException e) {
             logger.error("[Onc2Ont] Failed to communicate with onc2ont service", e);
             return ProcessClinicalNotesResult.error("Failed to communicate with onc2ont service: " + e.getMessage());
+        } catch (OWLOntologyCreationException e) {
+            logger.error("[Onc2Ont] Failed to parse Turtle content from service", e);
+            return ProcessClinicalNotesResult.error("Failed to parse axioms from service response: " + e.getMessage());
         } catch (Exception e) {
             logger.error("[Onc2Ont] Unexpected error during clinical notes processing", e);
             return ProcessClinicalNotesResult.error("An error occurred: " + e.getMessage());
         }
     }
 
+    /**
+     * Simple container for parsing results
+     */
+    private static class TurtleParsingResult {
+        final Set<OWLAxiom> axioms;
+        final Set<OWLAnnotation> annotations;
+        
+        TurtleParsingResult(Set<OWLAxiom> axioms, Set<OWLAnnotation> annotations) {
+            this.axioms = axioms;
+            this.annotations = annotations;
+        }
+    }
+
+    /**
+     * Parses turtle content and returns axioms and ontology annotations using Rio Turtle format
+     */
+    private TurtleParsingResult parseTurtleContent(String turtleContent) throws OWLOntologyCreationException {
+        logger.info("[Onc2Ont] Parsing {} characters of Turtle content", turtleContent.length());
+        
+        OWLOntologyManager manager = WebProtegeOWLManager.createOWLOntologyManager();
+        IRI tempDocumentIri = IRI.create(String.format("http://webprotege.stanford.edu/projects/%s/ontologies/temp", 
+                                                       projectId.getId()));
+        
+        RioTurtleDocumentFormat rioTurtleFormat = new RioTurtleDocumentFormat();
+        InputStream inputStream = new ByteArrayInputStream(turtleContent.getBytes(StandardCharsets.UTF_8));
+        
+        OWLOntologyDocumentSource source = new StreamDocumentSource(inputStream,
+                                                                    tempDocumentIri,
+                                                                    rioTurtleFormat,
+                                                                    "text/turtle");
+        
+        OWLOntology ontology = manager.loadOntologyFromOntologyDocument(source);
+        Set<OWLAxiom> axioms = ontology.getAxioms(Imports.INCLUDED);
+        Set<OWLAnnotation> annotations = ontology.getAnnotations();
+        
+        // Log the ontology annotations for debugging
+        if (!annotations.isEmpty()) {
+            logger.info("[Onc2Ont] Found ontology annotations:");
+            annotations.forEach(annotation -> 
+                logger.info("[Onc2Ont]   - {}: {}", 
+                           annotation.getProperty().getIRI(), 
+                           annotation.getValue())
+            );
+        } else {
+            logger.info("[Onc2Ont] No ontology annotations found in Turtle content");
+        }
+        
+        return new TurtleParsingResult(axioms, annotations);
+    }
+
     private String sendToOnc2Ont(String clinicalNotes) throws IOException {
-        URL url = new URL("http://onc2ont:5000/process");
-        logger.info("[Onc2Ont] Connecting to onc2ont service at {}", url);
-        HttpURLConnection connection = (HttpURLConnection) url.openConnection();
+        URI uri = URI.create("http://onc2ont:5000/process");
+        logger.info("[Onc2Ont] Connecting to onc2ont service at {}", uri);
+        HttpURLConnection connection = (HttpURLConnection) uri.toURL().openConnection();
         connection.setRequestMethod("POST");
         connection.setRequestProperty("Content-Type", "text/plain; charset=utf-8");
         connection.setDoOutput(true);
